<resources>
    <string name="app_name">Three In A Row</string>
    <string name="title_screen_label">Tap the screen to continue,
        colours alternate each click, avoid three in a row!</string>
    <string name="action_settings">Settings</string>
    <string name="title_label">Tap the screen to continue</string>
    <string name="title_activity_game">Three In A Row</string>
    <string name="new_game">New Game</string>
    <string name="help">Help</string>
    <string name="highscores">Highscores</string>
    <string name="title_activity_help">Help</string>
    <string name="title_activity_highscores">Highscores</string>
    <string name="body_highscores">Page under construction. Highscores will be saved locally
        and displayed on this screen!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="body_settings">Page under construction. Settings for user to
        customize app will go here!</string>
    <string name="btnNew">New Game</string>
    <string name="nextColor">Next Colour:</string>
    <string name="lblColor1">Color 1</string>
    <string name="lblColor2">Color 2</string>
    <string name="lblGridSize">Grid Size</string>
    <string name="lblDifficulty">Difficulty</string>
    <string name="lblSettingsButton">Save Settings</string>
    <string name="lblTimer"></string>
    <string name="page1">Page 1</string>
    <string name="page2">Page 2</string>
    <string name="page3">Page 3</string>
    <string name="page4">Page 4</string>
    <string name="lblHelpPage1">How to play Three in a Row?\nThe object of the game is to avoid
    three in a row of the same colour square horizontally or vertically. \nEach time you click a
        grey square, the colour will alternate between colour 1 and colour 2.
        </string>
    <string name="lblPage1">Swipe right to\nHelp Page 2</string>
    <string name="lblHelpPage2">When you make it to the end of the game without getting 3 in a row,
    you have won the game and the completed board will look something like this:</string>
    <string name="lblPage2Left">Swipe left to\nHelp Page 1</string>
    <string name="lblPage2Right">Swipe right to\nHelp Page 3</string>

    <string name="lblHelpPage3">Settings.\nYou can change the settings to customize your
        experience. Simply click on the spinner for the setting you want to change and set the
        value. Press the Save Settings Button to save your values. Colour 1 and Colour 2 cannot
        be the same colour!</string>
    <string name="lblPage3Left">Swipe left to\nHelp Page 2</string>
    <string name="lblPage3Right">Swipe right to\nHelp Page 4</string>

    <string name="lblHelpPage4">Difficulty\nBoard will flash with 5 seconds remaining\n\nEasy
        \n60 second time limit\n\nMedium\n45 seconds time
        limit\n\nHard\n30 second time limit\n\nExtreme\nIf you are really up for a challenge!
        \n20 second time limit and a random tile added every 5 seconds \n\n</string>
    <string name="lblPage4Left">Swipe left to\nHelp Page 3</string>
    <string name="lblSave">Save Score</string>

    <string name="lblHighscore">Enter your name for a highscore!</string>
    <string-array name="spinColor">
        <item>Blue</item>
        <item>Green</item>
        <item>Red</item>
        <item>White</item>
        <item>Purple</item>
        <item>Yellow</item>
    </string-array>

    <string-array name="spinDifficulty">
        <item>Easy</item>
        <item>Medium</item>
        <item>Hard</item>
        <item>Extreme</item>
    </string-array>

    <string-array name="spinGrid">
        <item>4 x 4</item>
        <item>5 x 5</item>
        <item>6 x 6</item>
        <item>7 x 7</item>
    </string-array>

</resources>
