<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.dave.assignmentv3.Title">
    <item
        android:id="@+id/new_game"
        android:orderInCategory="100"
        android:title="@string/new_game"
        app:showAsAction="never" />
    <item
        android:id="@+id/highscores"
        android:orderInCategory="101"
        android:title="@string/highscores"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="102"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/help"
        android:orderInCategory="103"
        android:title="@string/help"
        app:showAsAction="never" />
</menu>
