<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:clickable="true">

    <TextView
        android:id="@+id/txtTimer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="70dp"
        android:text="@string/lblTimer"
        android:textSize="34sp" />

    <GridView
        android:id="@+id/gridview"
        android:layout_width="350dp"
        android:layout_height="350dp"
        android:gravity="fill"
        android:horizontalSpacing="1dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="1dp"
        android:layout_below="@+id/txtTimer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"></GridView>

    <Button
        android:id="@+id/btnNew"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/colorPreview"
        android:layout_alignEnd="@+id/gridview"
        android:layout_alignRight="@+id/gridview"
        android:layout_marginEnd="27dp"
        android:layout_marginRight="27dp"
        android:text="@string/btnNew" />

    <TextView
        android:id="@+id/nextColour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/btnNew"
        android:layout_alignBottom="@+id/btnNew"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="51dp"
        android:layout_marginStart="51dp"
        android:text="@string/nextColor" />

    <ImageView
        android:id="@+id/colorPreview"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_below="@+id/gridview"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/nextColour"
        android:layout_toRightOf="@+id/nextColour"
        app:srcCompat="@drawable/blue" />



</RelativeLayout>